--- a/bitmapvector.html
+++ b/bitmapvector.html
@@ -13,7 +13,7 @@
         <li><a href="compressie.html">Compressie</a></li>
         <li><a href="algemene informatie.html">Algemene Informatie</a></li>
        </ul>
-       <h1>Bitmap- en Vectorafbeeldingen / Wat zijn het?</h1>
+       <h1>Bitmap- en Vectorafbeeldingen / Wat zijn het?</h1> <!-- dit is een kopje met h1 voor de pagina -->
        <h1>Bitmap-afbeelding</h1>
        <p>Een bitmap-afbeelding bestaat uit duizenden kleine puntjes die we pixels noemen. Elk van die puntjes heeft een eigen kleur. Als je een foto of afbeelding op je scherm ziet, zijn het die pixels die samen het hele plaatje vormen. 
          Wanneer je een bitmap-afbeelding vergroot, worden de pixels ook groter, waardoor de afbeelding er blokkerig en minder scherp uitziet.
