--- a/compressie.html
+++ b/compressie.html
@@ -13,7 +13,7 @@
         <li><a href="compressie.html">Compressie</a></li>
         <li><a href="algemene informatie.html">Algemene Informatie</a></li>
        </ul>
-       <h1>Compressie / Wat is het?</h1>
+       <h1>Compressie / Wat is het?</h1>  <!-- dit is een kopje met h1 voor de pagina -->
        <p>Compressie is een manier om bestanden kleiner te maken, zodat ze minder ruimte innemen of sneller verstuurd kunnen worden. 
         Er zijn twee soorten compressie: verliesloos en verlieslatend.</p>
         <h1>Verliesloze compressie</h1>
@@ -32,6 +32,6 @@
             <p>Minder ruimte: Je kunt meer bestanden opslaan.</p>
             <p>Sneller versturen: Kleine bestanden kunnen sneller via internet verstuurd worden.</p>
             <p>Kortom, verliesloze compressie houdt de kwaliteit, en verlieslatende compressie maakt het bestand veel kleiner, maar kan wat details verliezen.</p>
-            <img src="compressie.jpg" alt="Compressie Verschil" width="500" height="500">
+            <img src="compressie.jpg" alt="Compressie Verschil" width="500" height="500"> <!-- dit is een foto met een breedte van 500 en hoogte van 500. -->
        <body>
         <html>
