--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -13,7 +13,7 @@
         <li><a href="compressie.html">Compressie</a></li>
         <li><a href="algemene informatie.html">Algemene Informatie</a></li>
        </ul>   
-       <h1>Kleurmodellen / Wat zijn het?</h1>
+       <h1>Kleurmodellen / Wat zijn het?</h1> <!-- dit is een kopje met h1 voor de pagina -->
        <p>Kleurmodellen zijn systemen die ons helpen kleuren op een gestructureerde manier te beschrijven. Ze zijn belangrijk omdat ze bepalen hoe kleuren worden weergegeven op verschillende apparaten, zoals computerschermen en printers. Elk kleurmodel heeft een eigen manier om kleuren te definiëren, afhankelijk van hoe kleuren worden gecombineerd en weergegeven.</p>
        <h1>RGB</h1> 
        <p>RGB staat voor Rood Groen Blauw, de 3 belangrijkste kleuren. Kleuren worden gemaakt door deze 3 te combineren. Meer licht maakt de kleur lichter.
