--- a/binairestelsel.html
+++ b/binairestelsel.html
@@ -36,6 +36,6 @@
       De letter a heeft de code 97.
       Het cijfer 1 heeft de code 49.
       Een spatie heeft de code 32.</p>
-      <img src="ascii.webp" alt="ASCII-tabel">
+      <img src="ascii.webp" alt="ASCII-tabel"> <!-- dit is een foto, geen aangepaste hoogte of breedte. -->
     </body>
     </html> 
