--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -28,6 +28,6 @@
           <img src="pixels.jpg" alt="Pixels" width="200" height="200">
           <h1>Resolutie</h1>
           <p>Resolutie vertelt je hoeveel pixels er in een afbeelding of op een scherm zitten. Het wordt meestal aangegeven met twee getallen, bijvoorbeeld 1920x1080. Dit betekent dat het beeld 1920 pixels breed is en 1080 pixels hoog.</p>
-          <img src="hoog-laag.jpg" alt="Resolutie" width="300" height="300">
+          <img src="hoog-laag.jpg" alt="Resolutie" width="300" height="300"> <!-- dit is een foto met een breedte van 300 en hoogte van 300. -->
         </body>
     </html>
