--- a/overmij.html
+++ b/overmij.html
@@ -13,7 +13,7 @@
       <li><a href="compressie.html">Compressie</a></li>
       <li><a href="algemene informatie.html">Algemene Informatie</a></li>
     </ul>
-      <h1>Over mij</h1>
+      <h1>Over mij</h1> <!-- dit is een kopje met h1 voor de pagina -->
       <p>Mijn naam is Deniz Yilmaz en ik ben 15 jaar oud. Ik ben geboren in Nederland, Leiderdorp maar mijn ouders komen uit Turkije. Ik zie mezelf als een Turk. Ik zit op het Vlietland College en ik doe Havo 4. Ik heb het vakkenpakket C&M gekozen met natuurlijk informatica erbij. 
          Mijn favoriete vak is ook informatica. Later wil ik ook graag informatica studeren aan de Hogeschool van Leiden. Als dat niet kan wil ik graag rechten studeren.
          Mijn hobbys zijn voetballen en gamen. Dit doe ik graag samen met mijn vrienden. Ik zou het leuk vinden om later een game te maken of te werken bij grote bedrijven zoals Google, Meta, Apple enzovoort.</p>
