--- a/compressie.html
+++ b/compressie.html
@@ -15,15 +15,15 @@
        </ul>
        <h1>Compressie / Wat is het?</h1>  <!-- dit is een kopje met h1 voor de pagina -->
        <p>Compressie is een manier om bestanden kleiner te maken, zodat ze minder ruimte innemen of sneller verstuurd kunnen worden. 
-        Er zijn twee soorten compressie: verliesloos en verlieslatend.</p>
-        <h1>Verliesloze compressie</h1>
-        <p>Bij verliesloze compressie worden de bestanden kleiner gemaakt zonder dat er iets verloren gaat. 
+        Er zijn twee soorten compressie: Lossy en Lossless.</p>
+        <h1>Lossless compressie</h1>
+        <p>Bij Lossless compressie worden de bestanden kleiner gemaakt zonder dat er iets verloren gaat. 
           Je kunt het bestand altijd weer precies herstellen zoals het was.</p>
           <p>Voorbeelden: ZIP-bestanden en PNG-afbeeldingen.</p>
           <p>Voordeel: Je verliest geen kwaliteit.</p>
           <p>Nadeel: De bestanden worden niet heel veel kleiner.</p>
-          <h1> Verlieslatende compressie</h1>
-          <p>Bij verlieslatende compressie worden sommige gegevens verwijderd om het bestand veel kleiner te maken. 
+          <h1> Lossy compressie</h1>
+          <p>Bij Lossy compressie worden sommige gegevens verwijderd om het bestand veel kleiner te maken. 
             Dit kan wel leiden tot een beetje kwaliteitsverlies, omdat details verloren gaan.</p>
             <p>Voorbeelden: JPEG-afbeeldingen en MP3-muziekbestanden.</p>
             <p>Voordeel: De bestanden worden heel klein.</p>
@@ -31,7 +31,7 @@
             <h1>Waarom gebruiken we compressie?</h1>
             <p>Minder ruimte: Je kunt meer bestanden opslaan.</p>
             <p>Sneller versturen: Kleine bestanden kunnen sneller via internet verstuurd worden.</p>
-            <p>Kortom, verliesloze compressie houdt de kwaliteit, en verlieslatende compressie maakt het bestand veel kleiner, maar kan wat details verliezen.</p>
+            <p>Kortom, Lossless compressie houdt de kwaliteit, en Lossy compressie maakt het bestand veel kleiner, maar kan wat details verliezen.</p>
             <img src="compressie.jpg" alt="Compressie Verschil" width="500" height="500"> <!-- dit is een foto met een breedte van 500 en hoogte van 500. -->
        <body>
         <html>
