--- a/binairestelsel.html
+++ b/binairestelsel.html
@@ -16,7 +16,7 @@
       <h1>Het Binaire Stelsel / Wat is het?</h1> <!-- dit is een kopje met h1 voor de pagina -->
       <p>Het binaire stelsel is een manier van tellen met alleen de cijfers 0 en 1. Computers gebruiken dit systeem omdat ze alleen twee situaties kunnen herkennen: aan (1) en uit (0).</p>
       <h1>Hoe werkt het binaire stelsel?</h1>  
-      <p>Net zoals wij tellen met de cijfers 0 tot 9 (decimaal), telt het binaire systeem met alleen 0 en 1. In plaats van dat de getallen oplopen met tientallen, zoals in ons systeem (10, 100, 1000), lopen ze in binair op met tweetallen:
+      <p>Net zoals wij tellen met de cijfers 0 tot 9, telt het binaire systeem met alleen 0 en 1. In plaats van dat de getallen oplopen met tientallen, zoals in ons systeem (10, 100, 1000), lopen ze in binair op met tweetallen:
 
         1, 2, 4, 8, 16, enzovoort.</p>
         <p>Voorbeeld:
