--- a/binairestelsel.html
+++ b/binairestelsel.html
@@ -22,7 +22,7 @@
         <p>Voorbeeld:
           Het binaire getal 101 betekent:
           
-          1 keer 4 + 0 keer 2 + 1 keer 1 = 5 in ons decimale systeem.</p>
+          1 keer 4 + 0 keer 2 + 1 keer 1 = 5 in ons systeem.</p>
           <h1>Waarom gebruiken computers binair?</h1>
           <p>Computers werken met elektrische stroom, die aan (1) of uit (0) kan staan. Daarom gebruiken ze het binaire systeem om gegevens op te slaan en te verwerken.</p>
 
