--- a/binairestelsel.html
+++ b/binairestelsel.html
@@ -30,7 +30,7 @@
       <p>Hieronder zie je een spel genaamd Binary Bonzanza. Het is een leuk spel die je helpt met het binaire stelsel.</p>
       <iframe src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="no" scrolling="no" ></iframe> <!-- dit is de code voor de spel binary bonanza. De breedte is 700 en de hoogte is 500. Er is geen border en je kan niet scrollen. -->
     <h1>ASCII Tabel</h1>
-    <p>De ASCII-tabel (American Standard Code for Information Interchange) is een lijst van codes die computers gebruiken om letters, cijfers, symbolen en besturingscommando's te begrijpen en weer te geven. Elk teken of symbool dat je op je toetsenbord ziet, heeft een bijbehorende ASCII-code, die in feite een getal is.</p>
+    <p>De ASCII-tabel (American Standard Code for Information Interchange) is een lijst van codes die computers gebruiken om letters, cijfers, symbolen en besturingscommando's te begrijpen en weer te geven. Elk teken of symbool dat je op je toetsenbord ziet, heeft een bijbehorende ASCII-code, die in een getal is.</p>
     <p>De ASCII-tabel zet tekens zoals letters (A, B, C), cijfers (1, 2, 3) en speciale symbolen (@, #, &) om in getallen. Computers kunnen alleen werken met getallen, dus de ASCII-tabel helpt ze begrijpen welke tekens ze moeten laten zien of verwerken.</p>
     <p>De letter A heeft de ASCII-code 65.
       De letter a heeft de code 97.
